Add get beers action
