# src/Controller/BeerController.php
@@ -43,4 +43,21 @@ class BeerController extends AbstractBaseController
 
         return new JsonResponse($serializedBeer, JsonResponse::HTTP_CREATED);
     }
+
+    /**
+     * @OA\Get(
+     *     tags={"Beer"},
+     *     summary="Get all beers",
+     *     path="/api/beers",
+     * )
+     */
+    public function list(BeerService $beerService): JsonResponse
+    {
+        $beers = $beerService->getAllBeers();
+        $serializedBeers = $this->_serializer->normalize($beers, 'array', [
+            'groups' => 'beer:get'
+        ]);
+
+        return new JsonResponse($serializedBeers, JsonResponse::HTTP_OK);
+    }
 }
